http学习 加入cloud依赖